# csdr-cog-cruncher

./: .gitignore  README.md  pyproject.toml
configs/: aca-workstation.yaml  seagrass-2019-2020.yaml  seagrass-2023-2024.yaml  workflow.example.yaml
scripts/: merge_stac.py  rebuild_catalog.py  run_workflow.py  run_workflow.sh  run_workstation_products.sh
src/csdr_cog_cruncher/: __init__.py  cli.py  config.py  grid.py  inventory.py  metadata.py  mosaic.py  publish.py  stac.py  validate.py  workflow.py
tests/: test_inventory.py  test_merge_stac.py  test_metadata.py  test_workflow_end_to_end.py
