[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csdr-cog-cruncher"
version = "0.1.0"
description = "Combine tiled GeoTIFF/COG inputs into a sparse mosaic with STAC metadata."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "click>=8.1",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "pystac>=1.14",
  "rasterio>=1.4",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
csdr-cog-cruncher = "csdr_cog_cruncher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
